# rust-mcp-sdk

./: .gitignore  .pre-commit-README.md  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  MIGRATION_GUIDE.md  Makefile  QUALITY_REPORT.md  README.md  REFACTORING_FIXES.md  REFACTORING_ISSUE.md  REFACTORING_SUMMARY.md  RELEASE_NOTES_v1.5.0.md  WASM_FIXES_SUMMARY.md  WASM_POLISH_COMPLETE.md  test-basic.rs
.cargo/: config.toml
.github/workflows/: book.yml  ci.yml  fuzz.yml  mcp-tester-validation.yml  quality-badges.yml  release-tester.yml  release.yml
benches/: comprehensive_benchmarks.rs
claude-instance/: INVESTIGATION_REPORT.md
docs/: COMPREHENSIVE_TESTING_GUIDE.md  JSON_RPC_COMPATIBILITY.md  TESTING_WITH_MCP_TESTER.md  TYPED_TOOLS_GUIDE.md  WASM_ARCHITECTURE_ANALYSIS.md  WASM_IMPLEMENTATION_SUMMARY.md  WASM_POLISH_IMPROVEMENTS.md  WASM_TARGETS.md
docs/architecture/: oauth-separation-of-concerns.md  oauth-universal-architecture.md
docs/examples/: background-agents.md
docs/execution/: roadmap.md
docs/specifications/: pmcp-roadmap-spec.md
examples/: 06_server_prompts.rs  08_server_resources.rs  12_error_handling.rs  16_oauth_server.rs  22_streamable_http_server_stateful.rs  27_websocket_server_enhanced.rs  28_sse_optimized.rs  29_connection_pool.rs  30_enhanced_middleware.rs  31_advanced_error_recovery.rs  32_simd_parsing_performance.rs  32_typed_tools.rs  33_advanced_typed_tools.rs  34_serverbuilder_typed.rs  35_wasm_typed_tools.rs  36_typed_tool_v2_example.rs  37_description_variants_example.rs  47_multiple_clients_parallel.rs  48_structured_output_schema.rs  49_tool_with_sampling_server.rs  Makefile  WASM_DEPLOYMENT_GUIDE.md  crt.pem  refactored_server_example.rs  spin.sig
examples/25-oauth-basic/: Cargo.toml  Makefile  README.md  run-silent.sh  stdio-minimal.rs  test-client.rs  test-curl.sh  test-http.sh  test-minimal.rs  test-stdio.sh  test.rs
examples/25-oauth-basic/src/: main.rs
examples/26-server-tester/: Cargo.toml  Makefile  README.md  SCENARIO_FORMAT.md  wikipedia_test_scenario.yaml  wikipedia_test_scenario_full.yaml
examples/26-server-tester/scenarios/: basic-test.yaml  complex-workflow.json  logseq-basic.yaml  logseq-journal.yaml  logseq-test.yaml  logseq-workflow.json  performance-test.yaml  prompts_test.yaml  resources_test.yaml  tool-validation.yaml  wikipedia-test.yaml
examples/26-server-tester/src/: diagnostics.rs  main.rs  report.rs  scenario.rs  scenario_executor.rs  scenario_generator.rs  tester.rs  validators.rs
examples/33_wasi_server/: Cargo.toml  README.md
examples/33_wasi_server/mcp-wasi-host/: Cargo.toml
examples/33_wasi_server/mcp-wasi-host/src/: main.rs
examples/33_wasi_server/mcp-wasi-server/: Cargo.toml
examples/33_wasi_server/mcp-wasi-server/src/: lib.rs
examples/33_wasi_server/mcp-wasi-server/wit/: http-proxy.wit
examples/cloudflare-worker-mcp/: CURRENT_STATE.md  Cargo.toml  Cargo_sdk.toml  Makefile  README.md  README_SDK.md  package.json  worker-rust.js  worker-with-tools.js  worker.js  wrangler-sdk.toml  wrangler.toml
examples/cloudflare-worker-mcp/src/: index.js  lib.rs  lib_original.rs  types.rs
examples/cloudflare-worker-rust/: .gitignore  Makefile  README.md  worker.js  wrangler.toml
examples/fermyon-spin-rust/: Cargo.toml  README.md
examples/fermyon-spin-rust/src/: lib.rs  lib_old.rs
examples/scenarios/: 22_http_stateful_test.yaml
examples/test-basic/: Cargo.toml
examples/test-basic/src/: main.rs
examples/wasm-client/: Cargo.toml  README.md  build.sh  index.html  main.js  mcp_wasm_client.js  mcp_wasm_client_bg.wasm  style.css
examples/wasm-client/claude-instance/: INVESTIGATION_REPORT.md
examples/wasm-client/src/: lib.rs  utils.js
examples/wasm-mcp-server/: Cargo.toml  DEPLOYMENT_GUIDE.md  Makefile  README.md
examples/wasm-mcp-server/deployments/cloudflare/: ARCHITECTURE.md  DEPLOYMENT.md  Makefile  README.md  worker-rust.js  worker.js  wrangler.toml
examples/wasm-mcp-server/deployments/fermyon-spin/: Cargo.toml  Makefile  README.md  spin.toml  src.md
examples/wasm-mcp-server/deployments/fermyon-spin/src/: lib.rs
examples/wasm-mcp-server/src/: lib.rs
examples/wasm-mcp-server/test-scenarios/: all-tools-test.yaml  calculator-simple.json  calculator-test.yaml  minimal-test.json
fuzz/fuzz_targets/: auth_flows.rs  transport_layer.rs
pmcp-book/: .gitignore  README.md  book.toml
pmcp-book/book/: 404.html  appendix-a-installation.html  appendix-b-config.html  appendix-c-api.html  appendix-d-errors.html  appendix-e-troubleshooting.html  appendix-f-glossary.html  appendix-g-resources.html  ch01-installation.html  ch02-first-server.html  ch03-first-client.html  ch04-protocol-basics.html  ch05-tools.html  ch06-resources.html  ch07-prompts.html  ch08-error-handling.html  ch09-auth-security.html  ch10-01-websocket.html  ch10-02-http.html  ch10-03-streamable-http.html  ch10-transports.html  ch11-middleware.html  ch12-progress-cancel.html  ch13-production.html  ch14-performance.html  ch15-testing.html  ch16-deployment.html  ch17-01-parallel-clients.html  ch17-02-structured-output.html  ch17-03-sampling-tools.html  ch17-examples.html  ch18-patterns.html  ch19-integration.html  ch20-typescript-interop.html  ch21-migration.html  ch22-feature-parity.html  ch23-custom-transports.html  ch24-extensions.html  ch25-analysis.html  ch26-contributing.html  (+7 more)
scripts/: test_examples_with_tester.sh
src/: lib.rs  wasi.rs
tests/: advanced_error_recovery_tests.rs  connection_pool_tests.proptest-regressions  connection_pool_tests.rs  enhanced_middleware_tests.rs  http_json_rpc_compatibility.rs  json_rpc_compatibility.rs  property_tests.proptest-regressions  property_tests.rs  protect_tool_fix.rs  protocol_invariants.rs  simd_parsing_tests.proptest-regressions  simd_parsing_tests.rs  sse_optimization_tests.rs  test_cancellation.rs  tool_with_sampling_tests.rs  toolresult_export_tests.rs  toolresult_property_tests.rs  transport_isolation_properties.rs  typed_tool_sse_test.rs  typed_tool_tests.rs  typed_tool_transport_e2e.rs  typescript_interop.rs  websocket_property_tests.rs
(+120 files in other folders)
