[package]
name = "mcp-server-tester"
version = "0.1.0"
edition = "2021"
authors = ["PMCP SDK Contributors"]
description = "Comprehensive MCP server testing tool"
license = "MIT"
repository = "https://github.com/paiml/rust-mcp-sdk"
keywords = ["mcp", "testing", "validation", "cli", "tools"]
categories = ["development-tools::testing", "command-line-utilities"]

[[bin]]
name = "mcp-tester"
path = "src/main.rs"

[dependencies]
pmcp = { path = "../../", features = ["streamable-http"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
colored = "3"
indicatif = "0.18"
regex = "1"
rand = "0.9"
url = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
chrono = "0.4"
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3"