[package]
name = "cloudflare-worker-mcp"
version = "0.1.0"
edition = "2021"
authors = ["MCP SDK Contributors"]
description = "MCP server deployed as a Cloudflare Worker"

[dependencies]
# Note: We're NOT using pmcp here to demonstrate the architecture concept
# In production, we would fix pmcp to be WASM-compatible
worker = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"

[[bin]]
name = "test-client"
required-features = ["test-client"]

[lib]
crate-type = ["cdylib"]

[features]
test-client = ["reqwest", "tokio"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", optional = true, features = ["json"] }
tokio = { version = "1", optional = true, features = ["full"] }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization