[package]
name = "mcp-wasm-client"
version = "0.1.0"
edition = "2021"
description = "A WASM-based MCP client for browser applications."
license = "MIT"
repository = "https://github.com/paiml/pmcp"
keywords = ["mcp", "wasm", "client", "browser", "protocol"]
categories = ["wasm", "web-programming", "api-bindings"]

[package.metadata.wasm-pack]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pmcp = { path = "../..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console", "WebSocket"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
