[package]
name = "mcp-wasi-host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
wasmtime = "21.0"
anyhow = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
bytes = "1"
