[package]
name = "mcp-wasi-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pmcp = { path = "../../../", default-features = false, features = ["wasi"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"


# We need a reqwest version that has wasi-http support
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }

# WASI bindings
wit-bindgen = "0.24"
wasi = "0.11"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"