[package]
name = "mcp-fermyon-spin"
version = "0.1.0"
edition = "2021"

[dependencies]
spin-sdk = "3"
pmcp = { path = "../../../..", default-features = false, features = ["wasm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"

[lib]
name = "mcp_fermyon_spin"
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

# Exclude from parent workspace
[workspace]